# gridh-pages

./: .gitignore  MANIFEST.in  README.rst  environment.yml  pyproject.toml  requirements.txt
gridh_pages/: admin.py  apps.py  models.py  urls.py  views.py
gridh_pages/templates/pages/: base.html  default.html  footer.html  header.html  matomo.html  navigation.html
gridh_pages/templatetags/: navigation.py
